# photos-to-json

./: .editorconfig  Cargo.toml  README.md
src/: main.rs
src/commands/: generate.rs
src/models/: image.rs
src/utils/: mod.rs  write_json.rs
wix/: License.rtf  main.wxs
