[package]
name = "photos-to-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {  version = "4.4.18", features = ["derive", "suggestions", "color"] }
color-thief = "0.2.2"
image = { version = "0.24.6", default-features = false, features = ["jpeg", "png"] }
indicatif = "0.17.7"
path-absolutize = "3.1.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
snafu = "0.8.0"
walkdir = "2.4.0"